[tool.poetry]
name = "twitter_lda_and_stats"
version = "0.1.0"
description = "Every thesis is better with ml."
authors = ["jdmartin <foo@foo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
sklearn = "^0.0"
nltk = "^3.5"
bs4 = "^0.0.1"
pdfminer = "^20191125"
pathlib = "^1.0.1"
gensim = "^4.1.0"
stop-words = "^2018.7.23"
lxml = "^4.6.3"
DateTime = "^4.3"
pyLDAvis = "^3.2.2"
pylint = "^2.8.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
