[tool.poetry]
name = "twitter_lda_and_stats"
version = "0.1.0"
description = "Every thesis is better with ml."
authors = ["jdmartin <foo@foo>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
sklearn = "^0.0"
nltk = "^3.5"
bs4 = "^0.0.1"
gensim = "^4.1.0"
stop-words = "^2018.7.23"
lxml = "^4.6.3"
DateTime = "^4.3"
pyLDAvis = "^3.2.2"
tabulate = "^0.8.9"
scipy = "^1.8.0"
"pdfminer.six" = "^20220524"
pathlib2 = "^2.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
